# ausim2

./: .codex  .gitignore  CLAUDE.md  CMakeLists.txt  MJDATA.TXT  README.md  em_run.sh  format.sh  mjmodel.xml  version.json
assets/crazyfile/: cf2.xml  scene.dynamic_obstacles.xml  scene.xml  scene_with_obstacles.xml
assets/omnidrone/: scene.dynamic_obstacles.xml
assets/scout_v2/: scene.dynamic_obstacles.xml  scene.xml  scout_v2.xml
assets/scout_v2/assets/: wheel_type1.STL  wheel_type2.STL
ausim_common/: CMakeLists.txt
ausim_common/src/common/db/: data_board.hpp  security_data.hpp
ausim_common/src/config/: quadrotor_config.cpp  quadrotor_config.hpp
ausim_common/src/converts/data/: clock.cpp  clock.hpp  cmd_vel.cpp  cmd_vel.hpp  common.cpp  common.hpp  image.cpp  image.hpp  imu.cpp  imu.hpp  odom.cpp  odom.hpp  transform.cpp  transform.hpp
ausim_common/src/converts/ipc/: bridge_packets.cpp  bridge_packets.hpp
ausim_common/src/data/: clock.hpp  cmd_vel.hpp  common.hpp  image.hpp  imu.hpp  odom.hpp  transform.hpp
ausim_common/src/ipc/: bridge_packets.hpp  socket_packet.hpp  socket_stream.hpp
ausim_common/src/manager/: ros_bridge_process_manager.cpp  ros_bridge_process_manager.hpp
ausim_common/src/ros/: ros2_bridge.cpp  ros2_bridge.hpp  ros_bridge_main.cpp
ausim_common/src/ros/publisher/: i_telemetry_publisher.hpp  id_dyn_obstacle_publisher.hpp
ausim_common/src/ros/publisher/data/: clock_data_publisher.cpp  clock_data_publisher.hpp  dyn_obstacle_data_publisher.cpp  dyn_obstacle_data_publisher.hpp  image_data_publisher.cpp  image_data_publisher.hpp  imu_data_publisher.cpp  imu_data_publisher.hpp  lidar_data_publisher.cpp  odom_data_publisher.cpp  odom_data_publisher.hpp  transform_data_publisher.cpp  transform_data_publisher.hpp
ausim_common/src/ros/subscriber/: i_command_subscriber.hpp
ausim_common/src/ros/subscriber/data/: cmd_vel_command_subscriber.cpp  cmd_vel_command_subscriber.hpp  teleop_event_subscriber.cpp  teleop_event_subscriber.hpp
ausim_common/src/runtime/: data_board_channels.hpp  data_board_interface.cpp  data_board_interface.hpp  dynamic_obstacles_snapshot.hpp  mode_actions_registry.hpp  robot_mode_state_machine.cpp  robot_mode_state_machine.hpp  runtime_types.hpp  state.hpp
ausim_common/src/sim/: dynamic_obstacle_runtime.cpp  dynamic_obstacle_runtime.hpp
ausim_common/tests/: ausim_msg_interface_test.cpp  dynamic_obstacle_packet_test.cpp  dynamic_obstacle_registry_config_test.cpp  lidar_data_publisher_test.cpp  robot_mode_state_machine_test.cpp  sensor_config_dedup_test.cpp
docs/: ros_business_interfaces_zh.md  ros_message_architecture.md  ros_message_architecture.zh-CN.md
ground_vehicle/: CMakeLists.txt
ground_vehicle/cfg/: ground_vehicle_registry.yaml  sim_config.yaml
ground_vehicle/cfg/robot/: scout_v2_config.yaml
ground_vehicle/cfg/teleop/: scout_default.yaml
ground_vehicle/src/: main.cpp
ground_vehicle/src/config/: scout_config.cpp  scout_config.hpp
ground_vehicle/src/control/: differential_drive_controller.cpp  differential_drive_controller.hpp
ground_vehicle/src/sim/: scout_sim.cpp  scout_sim.hpp  wheel_actuator_writer.cpp  wheel_actuator_writer.hpp
ground_vehicle/tests/: dynamic_obstacle_test.cpp  dynamic_obstacle_viewer_publish_test.cpp
log/: latest_list
quadrotor/: CMakeLists.txt  README.md  config.yaml
quadrotor/cfg/: quadrotor_registry.yaml  sim_config.yaml
quadrotor/cfg/robot/: crazyfile_config.yaml  omnidrone_config.yaml  xi35_config.yaml
quadrotor/cfg/teleop/: quadrotor_default.yaml
quadrotor/include/control/: motor_mixer.hpp
quadrotor/include/controller/: se3_controller.hpp  state.hpp
quadrotor/include/math/: geometry.hpp
quadrotor/include/sim/: quadrotor_sim.hpp
quadrotor/src/: geometry.cpp  main.cpp  motor_mixer.cpp  quadrotor_sim.cpp  se3_controller.cpp
quadrotor/src/app/: quadrotor_app.cpp
quadrotor/src/config/: quadrotor_config.cpp  quadrotor_config.hpp
quadrotor/src/control/: motor_mixer.cpp
quadrotor/src/controller/: se3_controller.cpp  se3_controller.hpp
quadrotor/src/math/: geometry.cpp  geometry.hpp
quadrotor/src/runtime/: goal_provider.cpp  goal_provider.hpp  quadrotor_runtime_types.hpp  vehicle_runtime.cpp  vehicle_runtime.hpp
quadrotor/src/sim/: camera_renderer.cpp  camera_renderer.hpp  mujoco_actuator_writer.cpp  mujoco_actuator_writer.hpp  mujoco_bindings.cpp  mujoco_state_reader.cpp  quadrotor_sim.cpp  quadrotor_sim.hpp
quadrotor/tests/: dynamic_obstacle_no_depth_test.cpp  dynamic_obstacle_viewer_publish_test.cpp  model_sensor_binding_test.cpp  takeoff_goal_provider_test.cpp
reference/Chapter5-draw/: draw.cpp
script/: MUJOCO_LOG.TXT  main.py  resolve_model_registry.py  se3_controller.py
